# gene.rs

./: .gitignore  .travis.yml  Cargo.toml  Gemfile  Guardfile  README.md  Vagrantfile  gene-rs.code-workspace
benches/: fibonacci.rs
benchmark-logs/: fib24_2019-06-29_11:32:31_fd219fec.txt  fib24_2019-06-29_11:40:58_72d02712.txt  fib24_2019-06-29_13:59:12_c4e46f25.txt  fib24_2019-06-30_08:02:49_19d33fdf.txt  fib24_2019-06-30_09:57:14_1b5d3556.txt  fib24_2019-07-02_17:25:59_cc52470d.txt  fib24_2019-07-03_10:08:41_986d25c0.txt  fib24_2019-07-03_10:52:27_766e7db1.txt  fib24_2019-07-03_20:40:54_86dbbb56.txt  fib24_2019-07-03_20:50:44_777e0aa2.txt  fib24_2019-07-03_21:16:51_302c74de.txt  fib24_2019-07-03_21:27:06_3c200f89.txt  fib24_2019-07-04_08:00:09_050ce26f.txt  fib24_2019-07-04_08:08:24_0925b589.txt  fib24_2019-07-04_08:09:53_e96556ad.txt  fib24_2019-07-04_10:08:39_5b613d2c.txt  fib24_2019-07-04_10:28:55_250203ba.txt  fib24_2019-07-04_10:30:27_ef2e4dc8.txt  fib24_2019-07-04_16:13:25_e1269803.txt  fib24_2019-07-04_16:36:06_5f4f5471.txt  fib24_2019-07-04_16:38:26_e8777461.txt  fib24_2019-07-04_16:40:05_a8d62b75.txt  fib24_2019-07-04_17:49:58_41d7a9f1.txt  fib24_2019-07-04_17:51:13_8476e4d6.txt  fib24_2019-07-04_17:52:38_6a428657.txt  fib24_2019-07-04_19:27:39_2f0d9fcb.txt  fib24_2019-07-04_19:31:54_3ade714b.txt  fib24_2019-07-04_19:33:02_7fa811d3.txt  fib24_2019-07-11_14:24:02_7a177a32.txt  fib24_2019-07-12_11:02:53_117ff500.txt  fib24_2019-07-16_14:13:29_4b7d4a47.txt  fib24_2019-07-29_10:56:18_3ef8bfd9.txt  fib24_2019-07-29_10:59:23_b57a5f4d.txt  (+22 more)
examples/: complete.gene
(+24 files in other folders)
